--- a/_posts/2025-01-21-回溯.md
+++ b/_posts/2025-01-21-回溯.md
@@ -30,13 +30,11 @@ layout: post
 
 ## 求解步骤
 
-1. 针对所有问题，确定问题的解空间：
+1. 针对所有问题，首先应明确定义问题的解空间，问题的解空间应至少包含问题的一个（最优）解。
 
-   首先应明确定义问题的解空间，问题的解空间应至少包含问题的一个（最优）解。
+2. 其次，确定结点的扩展搜索规则
 
-2. 确定结点的扩展搜索规则
-
-3. 以深度优先方式搜索解空间，并在搜索过程中用剪枝函数避免无效搜索
+3. 最后，以深度优先 + 层次遍历的方式搜索解空间，并在搜索过程中用剪枝函数避免无效搜索
 
 ---
 
@@ -288,6 +286,12 @@ candidates 中的每个数字在每个组合中只能使用一次。
 ]
 ```
 
+
+**去重方法一：startIndex去重（树层）（横向）**
+
+体现在代码中，限制条件`if i > startIndex and candidates[i] == candidates[i-1]:`是对重复元素进行过滤。
+`i>startIndex`而不是`i>0`是因为我们选择在层次遍历时，对元素进行去重。而层次的遍历起始索引就是startIndex。
+
 ```python
 class Solution:
     def combinationSum2(self, candidates: List[int], target: int) -> List[List[int]]:
@@ -307,9 +311,19 @@ class Solution:
                 path.pop()
         dfs(0, target)
         return ans
+```
 
-    # 使用used数组对元素进行去重
-    def combinationSum2_2(self, candidates: List[int], target: int) -> List[List[int]]:
+**去重方法二：used数组去重（树层）（横向）**
+
+体现在代码中，限制条件`if i > 0 and candidates[i] == candidates[i-1] and used[i-1] == False:`也是对重复元素进行过滤。
+此时只需要判断i从大于0开始，而非startIndex。因为used数组是所有递归公用的，能够全局表示集合的使用状态。
+
+为什么是 `used[i - 1] == False` 。因为选择的是同一树层。在同一树层，`used[i - 1] == False` 才能表示，当前取的 candidates[i] 是从 candidates[i - 1] 回溯而来的。
+<img src="{{ site.baseurl }}/assets/images/20230310000918.png" alt="使用used数组进行树层去重" style="width:800px; height:auto;" />
+
+```python
+class Solution:
+    def combinationSum2(self, candidates: List[int], target: int) -> List[List[int]]:
         candidates.sort()
         ans = []
         path = []
@@ -329,50 +343,20 @@ class Solution:
                 path.pop()
         dfs(0, target)
         return ans
-    
-    # 每层都是用一个set集合去重
-    def combinationSum2_3(self, candidates: List[int], target: int) -> List[List[int]]:
-        ans = []
-        path = []
-        def dfs(start_index, left_val):
-            if left_val < 0:
-                return
-            if left_val == 0:
-                ans.append(path.copy())
-            used = set()
-            for i in range(start_index, len(candidates)):
-                if candidates[i] in used:
-                    continue
-                used.add(candidates[i])
-                path.append(candidates[i])
-                dfs(i+1, left_val-candidates[i])
-                path.pop()
-        dfs(0, target)
-        return ans
 ```
+
 **总结：**
+
 本题中，最重要的影响因素是集合有重复元素，重复N次，表示该元素最多可以选N次。但是答案仍要求不能有相同的组合。
-> 
+
 > **强调一下，组合类问题，对树层去重的话，必须需要对集合先进行排序！**
-> 由于重复元素的位置不同，如果我们不先排序处理，则会出现元素位置不同、但元素值相同的组合（视为同一组合）。
-> 如集合为`c=[1,2,1,5],t=8`. 如果不排序的话，那么[1,2,5]和[2,1,5]都会被选出来。但他们是相同的组合。
->
-> 因此，正确的做法是必须先对集合进行排序，让相同的元素放在一起。然后针对同一树层上的元素，判断是否使用过。这样既能对树层去重，也能避免位置不同的组合。
-> 
+
+由于重复元素的位置不同，如果我们不先排序处理，则会出现元素位置不同、但元素值相同的组合（视为同一组合）。
+如集合为`c=[1,2,1,5],t=8`. 如果不排序的话，那么[1,2,5]和[2,1,5]都会被选出来。但他们是相同的组合。
+
+因此，正确的做法是必须先对集合进行排序，让相同的元素放在一起。然后针对同一树层上的元素，判断是否使用过。这样既能对树层去重，也能避免位置不同的组合。
+
 > 一般地，不对同一树枝上的重复元素进行去重，这样实现复杂，且效率低（所有树枝都要展开）。
-
-**去重方法一：startIndex去重（树层）（横向）**
-
-体现在代码中，限制条件`if i > startIndex and candidates[i] == candidates[i-1]:`是对重复元素进行过滤。
-`i>startIndex`而不是`i>0`是因为我们选择在层次遍历时，对元素进行去重。而层次的遍历起始索引就是startIndex。
-
-**去重方法二：used数组去重（树层）（横向）**
-
-体现在代码中，限制条件`if i > 0 and candidates[i] == candidates[i-1] and used[i-1] == False:`也是对重复元素进行过滤。
-此时只需要判断i从大于0开始，而非startIndex。因为used数组是所有递归公用的，能够全局表示集合的使用状态。
-
-为什么是 `used[i - 1] == False` 。因为选择的是同一树层。在同一树层，`used[i - 1] == False` 才能表示，当前取的 candidates[i] 是从 candidates[i - 1] 回溯而来的。
-<img src="{{ site.baseurl }}/assets/images/20230310000918.png" alt="使用used数组进行树层去重" style="width:800px; height:auto;" />
 
 ---
 
