--- a/_posts/2024-02-21-哈希表_双指针_滑动窗口.md
+++ b/_posts/2024-02-21-哈希表_双指针_滑动窗口.md
@@ -31,7 +31,7 @@ index = hash(key) % array_size
 
 ---
 
-常见操作
+常见操作如下表格所示。点击查看[更多操作技巧](/posts/Python集合)。
 
 | 操作        | 描述                 | 平均时间复杂度 |
 | --------- | ------------------ | ------- |
