--- a/_posts/programming/2025-08-09-Python集合.md
+++ b/_posts/programming/2025-08-09-Python集合.md
@@ -138,6 +138,27 @@ d4 = dict(zip(keys, values))
 
 ---
 
+**从键生成字典**
+```python
+new_d = dict.fromkeys(['x', 'y', 'z'], 0)
+# {'x': 0, 'y': 0, 'z': 0}
+```
+
+---
+
+**字典推导式**
+```python
+# 生成平方字典
+squares = {x: x**2 for x in range(5)}
+# {0: 0, 1: 1, 2: 4, 3: 9, 4: 16}
+
+# 过滤
+even_squares = {x: x**2 for x in range(5) if x % 2 == 0}
+# {0: 0, 2: 4, 4: 16}
+```
+
+---
+
 **访问与修改**
 ```python
 d = {'name': 'Alice', 'age': 25}
@@ -170,14 +191,6 @@ print(d.items())     # dict_items([('a', 1), ('b', 2), ('c', 3)])
 
 ---
 
-**从键生成字典**
-```python
-new_d = dict.fromkeys(['x', 'y', 'z'], 0)
-# {'x': 0, 'y': 0, 'z': 0}
-```
-
----
-
 **遍历**
 ```python
 for k in d:                  # 遍历键
@@ -188,19 +201,6 @@ for k, v in d.items():        # 遍历键值对
 
 for v in d.values():          # 遍历值
     print(v)
-```
-
----
-
-**字典推导式**
-```python
-# 生成平方字典
-squares = {x: x**2 for x in range(5)}
-# {0: 0, 1: 1, 2: 4, 3: 9, 4: 16}
-
-# 过滤
-even_squares = {x: x**2 for x in range(5) if x % 2 == 0}
-# {0: 0, 2: 4, 4: 16}
 ```
 
 ---
@@ -230,6 +230,85 @@ d1 = defaultdict(lambda: float('inf'))
 
 d2 = defaultdict(lambda: [0])
 ```
+
+---
+
+### OrderedDict用法
+
+`collections.OrderedDict` 在 Python 3.7+ 虽然**不再是“保序字典”的唯一选择**（因为普通 `dict` 也保留插入顺序），但它仍有几个**普通 dict 没有的功能**。
+
+**主要作用**
+
+1. **保留插入顺序（3.6 之前必须用它）**
+
+   * 在 Python 3.6 以前，普通 `dict` 不保证遍历顺序，`OrderedDict` 是唯一能保证顺序的选择。
+   * Python 3.7+ 中，这点变成了普通 `dict` 的默认行为，但它的其他功能仍然有用。
+
+2. **提供顺序操作方法**
+
+   * `move_to_end(key, last=True)`
+     把某个键移动到末尾或开头，方便实现 LRU、MRU 等缓存结构。
+
+     ```python
+     from collections import OrderedDict
+     od = OrderedDict(a=1, b=2, c=3)
+     od.move_to_end('a')        # {'b': 2, 'c': 3, 'a': 1}
+     od.move_to_end('b', last=False)  # {'b': 2, 'c': 3, 'a': 1}
+     ```
+
+3. **提供删除头部、尾部元素的操作方法**
+
+   * **`popitem(last=True)`**：弹出并返回一个 `(key, value)`。
+   
+   **参数**：
+     * `last=True`（默认） → 弹出末尾的元素（LIFO）
+     * `last=False` → 弹出开头的元素（FIFO）
+   
+   **用途**：实现 **LRU 缓存**（删除末尾）或 **FIFO 缓存**（删除开头）
+
+    ```python
+    od = OrderedDict([('a', 1), ('b', 2), ('c', 3)])
+    print(od.popitem(last=False))  # ('a', 1)
+    print(od)  # OrderedDict([('b', 2), ('c', 3)])
+    ```
+
+4. **顺序比较（3.7 以前有区别）**
+
+   * 在旧版本中，两个 `OrderedDict` 比较时，不仅比较键值，还比较顺序。
+
+     ```python
+     from collections import OrderedDict
+     od1 = OrderedDict([('a', 1), ('b', 2)])
+     od2 = OrderedDict([('b', 2), ('a', 1)])
+     print(od1 == od2)  # False（顺序不同）
+     ```
+     
+   * 普通 `dict` 在 3.7+ 中也是忽略顺序进行比较，但 `OrderedDict` 依旧是顺序敏感的。
+     ```python
+     d1 = {'a': 1, 'b': 2}
+     d2 = {'b': 2, 'a': 1}
+     
+     print(d1 == d2)  # True，顺序无关
+     ```
+
+4. **可作为队列型映射结构**
+
+   * 因为能在头尾插入/删除键值对，所以它常用来实现：
+
+     * [**LRU 缓存**（最近最少使用）](/posts/字典树_LRU_并查集/#lru)
+     * **FIFO 队列**（先进先出映射）
+
+---
+
+**VS 普通 dict**
+
+| 特性              | dict (3.7+) | OrderedDict |
+| --------------- | ----------- | ----------- |
+| 保留插入顺序          | ✅           | ✅           |
+| `move_to_end()` | ❌           | ✅           |
+| 顺序敏感比较          | ❌           | ✅           |
+| LRU/FIFO 支持     | ❌（需手写）      | ✅（方便）       |
+| Python 3.6- 保序  | ❌           | ✅           |
 
 ---
 
