--- a/_posts/2025-01-21-回溯.md
+++ b/_posts/2025-01-21-回溯.md
@@ -606,6 +606,7 @@ class Solution:
 输出： [[1,1,2], [1,2,1], [2,1,1]]
 ```
 
+**方法一：通过全局的used数组去重**
 ```python
 class Solution:
     def permuteUnique(self, nums: List[int]) -> List[List[int]]:
@@ -629,8 +630,12 @@ class Solution:
                 path.pop()
         dfs()
         return ans
+```
 
-    def permuteUnique2(self, nums: List[int]) -> List[List[int]]:
+**方法二：通过全局used数组 + 每一层的set集合去重**
+```python
+class Solution:
+    def permuteUnique(self, nums: List[int]) -> List[List[int]]:
         nums.sort()
         ans = []
         path = []
@@ -654,6 +659,7 @@ class Solution:
         dfs()
         return ans
 ```
+
 **总结：**
 去重一定要对元素进行排序，这样我们才方便通过相邻的节点来判断是否重复使用了。
 <img src="{{ site.baseurl }}/assets/images/20201124201331223.png" alt="全排列重复元素处理" style="width:800px; height:auto;" />
@@ -665,10 +671,9 @@ class Solution:
 
 ### 重复元素问题总结
 
-- 在问题[216-组合总和-II](#216-组合总和-iii)中，提供三种方法进行去重。每种方法都是对树层进行去重，但实现方式互不相同。
-  - startIndex关系（推荐）
-  - 全局的used数组
-  - 每一层的set集合
+- 在问题[40-组合总和-II](#40-组合总和-ii)中，提供两种方法进行去重。
+  - startIndex关系（推荐）。对树层进行去重，对于同一层，如果当前访问的元素刚刚访问过，则跳过访问，达到“去重”的效果。
+  - 全局的used数组。对数层进行去重，是通过全局的used数组来判断同一层的相同元素是否访问过，注意，用的是`used[i] = False`。
 - 在问题[47-全排列-II](#47-全排列-ii)中，提供两种方法进行去重。 
   - used数组（推荐）。该used数组同时兼判重功能，如果该层调度之前调度过，则跳过该元素；至于树层之间的去重，逻辑与组合问题一致。
   - used数组+每一层的set集合。逻辑较为清晰。used数组仅用于判断之前是否使用过；每一层的set集合用于树层之间的去重。
