--- a/_posts/2024-02-21-哈希表_双指针_滑动窗口.md
+++ b/_posts/2024-02-21-哈希表_双指针_滑动窗口.md
@@ -1,6 +1,7 @@
 ---
-title: "算法工具箱：哈希表 × 双指针 × 滑动窗口"
+title: "高效算法：哈希表/双指针/滑动窗口"
 categories: [ds-algo]
+tags: [algorithm]
 
 math: true
 layout: post
@@ -12,45 +13,73 @@ layout: post
 
 ## 哈希表
 
-哈希表是一种基于 **键-值对（Key-Value）** 的数据结构，提供了 **极高效率的查找、插入和删除操作**，其平均时间复杂度通常为 **O(1)**。
+**哈希表（Hash Table）**是一种基于 **哈希函数（Hash Function）** 的数据结构，通过将元素映射到数组下标位置，实现**近乎 O(1)** 的插入、删除和查找操作。
 
-它的核心思想是使用一个 **哈希函数（Hash Function）** 将关键字映射为数组下标，以便快速定位对应的值。
+它的核心思想是：
+
+1. **存放位置计算**：用哈希函数 `h(key)` 将键（Key）映射成数组索引。
+2. **快速定位**：通过数组下标直接访问数据。
+3. **冲突解决**：不同的键可能映射到同一个下标，需要冲突处理（如链地址法、开放定址法）。
 
 ---
 
-哈希表的基本原理：将键 `key` 通过某种计算规则（哈希函数），转换为一个整数，然后取模映射到数组下标：
+**特点**
 
+* **查找快**：平均时间复杂度 O(1)，最坏 O(n)（冲突严重时）。
+* **无序性**：元素在哈希表中通常是无序的。
+* **键唯一**：哈希表的 key 是唯一的。
+
+---
+
+**常见实现方式**
+
+1. 数组 + 链表（拉链法 / 分离链接法）
+   * 每个数组位置存放一个链表，冲突的元素链在一起。
+   * 适合频繁插入删除。
+
+2. 数组 + 开放定址（Open Addressing）
+   * 如果位置被占用，就向后找空位置。
+   * 节省指针空间，但删除复杂。
+
+---
+
+**常见操作（Python 示例）**
 ```python
-index = hash(key) % array_size
+# Python 内置 dict 就是哈希表
+hash_map = {}
+
+# 插入 / 更新
+hash_map['apple'] = 3
+hash_map['banana'] = 5
+
+# 查找
+if 'apple' in hash_map:
+    print(hash_map['apple'])  # 输出 3
+
+# 删除
+del hash_map['banana']
+
+# 遍历
+for key, value in hash_map.items():
+    print(key, value)
 ```
 
-不同的 key 可能会映射到同一个下标，称为**哈希冲突**，常见的解决方法有：
-
-* **拉链法（Chaining）**：数组元素是链表（或其他容器），冲突的键值对挂到这个链表上。
-* **开放地址法（Open Addressing）**：寻找数组中下一个空位存放冲突的元素（如线性探测、二次探测、双重哈希等）。
+[更多操作技巧](/posts/Python%E9%9B%86%E5%90%88/)
 
 ---
 
-常见操作如下表格所示。点击查看[更多操作技巧](/posts/Python集合)。
+**主要用途：**
 
-| 操作        | 描述                 | 平均时间复杂度 |
-| --------- | ------------------ | ------- |
-| 插入 Insert | `map[key] = value` | O(1)    |
-| 查找 Search | `value = map[key]` | O(1)    |
-| 删除 Delete | `del map[key]`     | O(1)    |
-| 判断是否存在    | `key in map`       | O(1)    |
+* 快速查找、插入、删除数据，平均时间复杂度接近 O(1)。
+* 用于解决需要频繁查询元素是否存在或统计元素频次的问题。
 
----
+**常见应用场景：**
 
-复杂度分析
-
-| 操作 | 平均时间复杂度 | 最坏时间复杂度（大量冲突） |
-| -- | ------- | ------------- |
-| 插入 | O(1)    | O(n)          |
-| 查找 | O(1)    | O(n)          |
-| 删除 | O(1)    | O(n)          |
-
-> 但在实际中，良好的哈希函数 + 动态扩容，可以将最坏情况避免，大多数语言（如 Python、Java、C++ STL）都使用负载因子 + 扩容机制来保持性能。
+* 去重问题（判断元素是否重复）
+* 频率统计（如找出现次数最多的元素）
+* 两数之和、三数之和等数值匹配问题
+* 字符串中字符出现频率统计
+* 记录元素索引或映射关系（如映射坐标或元素到另一集合）
 
 ---
 
@@ -70,6 +99,11 @@ index = hash(key) % array_size
 | 对撞指针（Opposite Pointers） | 一个从头，一个从尾，向中间逼近                     | 判断回文、两数之和     |
 | 同向指针（Sliding Window）    | 两个指针都从头开始，`right` 向右扩张，`left` 条件下缩小 | 子数组、最长子串、频率窗口 |
 | 快慢指针（Fast & Slow）       | 一快一慢，常用于链表                          | 判环、找中点        |
+
+**主要用途：**
+
+* 使用两个指针同时在数组或链表上移动，常用于线性遍历和查找。
+* 通过指针移动的配合，实现效率更高的搜索、匹配或合并操作。
 
 **双指针应用场景与题型：**
 
@@ -97,18 +131,25 @@ index = hash(key) % array_size
 * 满足某种条件
 * 统计区间属性（如和、最大值、最小值、频率）
 
-**适用场景：**
-
-* 数组 / 字符串中寻找满足条件的**子区间**
-* 最长/最短子串、子数组
-* 滑动区间统计最大/最小值
-
 **滑动窗口分类：**
 
 | 类型     | 示例                 | 特点            |
 | ------ | ------------------ | ------------- |
 | 固定窗口大小 | 「长度为 k 的最大和」       | 左右指针间距固定      |
 | 可变窗口大小 | 「最短子数组长度 ≥ target」 | 右指针滑动扩张，左指针缩小 |
+
+**主要用途：**
+
+* 在一组数据（数组/字符串）中，维护一个动态大小或固定大小的区间（窗口），用来求区间内的某种性质（和、最大值、字符种类等）。
+* 适合解决“连续子区间”的问题。
+
+**常见应用场景：**
+
+* 求最长无重复子串
+* 求最大/最小子数组和
+* 固定长度子串/子数组的统计问题
+* 字符串中满足条件的最短子串（如最小覆盖子串）
+* 连续区间的计数与统计
 
 ---
 
