--- a/_posts/2025-03-22-背包问题.md
+++ b/_posts/2025-03-22-背包问题.md
@@ -1,6 +1,7 @@
 ---
 title: "动态规划全解：背包问题全面解析"
 categories: [ds-algo]
+tags: [algorithm]
 
 math: true
 layout: post
@@ -210,8 +211,9 @@ print(knapsack_unbounded_2d(weights, values, W))  # 输出 15
 
 ## 一维 DP 优化
 
+上述求解0-1背包与完全背包的代码中，我们可以将二维 DP 数组降为一维 DP 数组来减少空间复杂度。
 
-在 **0-1 背包** 中，我们可以将二维 DP 数组降为一维 DP 数组来减少空间复杂度。**通过从大到小遍历背包容量，可以确保每个物品仅被选择一次。**
+在 **0-1背包** 中，由于每个物品仅可以被选择一次。因此，**需要通过从大到小遍历背包容量，确保每个物品不被重复选择。**
 
 状态转移方程：
 ```python
@@ -248,7 +250,7 @@ W = 10                     # 背包最大容量
 print(knapsack_01(weights, values, W))  # 输出 14
 ```
 
-在 **完全背包** 中，我们允许每个物品可以选择多次，**因此我们需要从小到大遍历背包容量来更新 DP 数组**。
+在 **完全背包** 中，由于允许每个物品可以选择多次。因此，**需要从小到大遍历背包容量来更新 DP 数组，确保同一个物品可以被多次选择**。
 
 状态转移方程：
 ```python
@@ -292,7 +294,7 @@ print(knapsack_unbounded(weights, values, W))  # 输出 15
 * **完全背包**：每个物品可以选择多次，使用动态规划时从小到大更新背包容量。
 
 **0-1 背包为什么不能正序？**
-> 假设你正序遍历 `j`，那么你刚刚更新完 `dp[j]`，在下一个容量 `j+1` 时，如果你用 `dp[j+1 - w[i]]` 转移，其实你可能用到的是刚刚更新过的 `dp[j]`，这就等于你在用同一个物品多次了！
+> 假设正序遍历背包容量 `j`，先刚刚更新完 `dp[j]`；在下一个容量 `j+1` 时，用 `dp[j+1 - w[i]]` 进行转移，其实就可能用到的是刚刚更新过的 `dp[j]`，这就等于用同一个物品多次！
 
 ---
 
@@ -353,6 +355,7 @@ print(knapsack_unbounded(n - 1, W))  # 输出 15
 **0-1背包**
 - [416. 分割等和子集](https://leetcode.cn/problems/partition-equal-subset-sum/)
 - [494. 目标和](https://leetcode.cn/problems/target-sum/)
+- [2787. 将一个数字表示成幂的和的方案数](https://leetcode.cn/problems/ways-to-express-an-integer-as-sum-of-powers/)
 
 **完全背包**
 - [322. 零钱兑换](https://leetcode.cn/problems/coin-change/)
