--- a/_posts/2025-06-08-买卖股票-经典面试.md
+++ b/_posts/2025-06-08-买卖股票-经典面试.md
@@ -1,10 +1,10 @@
 ---
 title: "【面试】买卖股票系列-题单"
 categories: [ds-algo]
+tags: [algorithm]
 
 math: true
 layout: post
-#author_profile: false
 ---
 
 股票买卖系列是动态规划的经典题目，也是面试的高频题目。
