--- a/_posts/think-n-code/2025-05-02-常用数据结构.md
+++ b/_posts/think-n-code/2025-05-02-常用数据结构.md
@@ -1,6 +1,7 @@
 ---
-title: "常用数据结构"
-categories: [programming]
+title: "Java & Python基础数据结构"
+categories: [think-n-code]
+tags: [programming]
 
 math: true
 layout: post
@@ -180,39 +181,60 @@ public class QueueExample {
 
 * 按优先级取元素，非全局有序。
 
+Java 中的优先级队列主要是指 `PriorityQueue` 类，它实现了一个基于堆的数据结构，可以按照元素的自然顺序或自定义比较器顺序来排序，保证每次取出的元素都是当前队列中优先级最高（最小或最大）的元素。
+
 ---
 
 ### 具体用法
 
-**Java**
 ```java
-import java.util.ArrayDeque;
-import java.util.Deque;
+import java.util.PriorityQueue;
 
-public class DequeExample {
+public class Demo {
     public static void main(String[] args) {
-        Deque<Integer> deque = new ArrayDeque<>();
+        PriorityQueue<Integer> pq = new PriorityQueue<>();
 
-        // 队尾入队
-        deque.offerLast(1);
-        deque.offerLast(2);
+        pq.add(30);
+        pq.add(10);
+        pq.add(20);
 
-        // 队首入队
-        deque.offerFirst(0);
-
-        // 队首出队
-        System.out.println(deque.pollFirst()); // 输出 0
-
-        // 队尾出队
-        System.out.println(deque.pollLast()); // 输出 2
+        System.out.println("PriorityQueue elements:");
+        while (!pq.isEmpty()) {
+            System.out.println(pq.poll());  // 输出顺序：10, 20, 30
+        }
     }
 }
 ```
 
 **常用方法**
-* `offerFirst(x)` / `offerLast(x)`
-* `pollFirst()` / `pollLast()`
-* `peekFirst()` / `peekLast()`
+
+| 方法                 | 说明                               |
+| ------------------ | -------------------------------- |
+| `add(E e)`         | 添加元素，元素不能为 null，若容量不够自动扩容。       |
+| `offer(E e)`       | 添加元素，效果同 `add()`，但适合用于队列接口调用。    |
+| `peek()`           | 查看队头元素（优先级最高的元素），不删除，若为空返回 null。 |
+| `poll()`           | 取出并删除队头元素，若为空返回 null。            |
+| `remove(Object o)` | 删除指定元素，若存在。                      |
+| `size()`           | 返回当前元素个数。                        |
+| `isEmpty()`        | 判断队列是否为空。                        |
+| `clear()`          | 清空队列。                            |
+| `iterator()`       | 返回队列元素的迭代器，注意迭代顺序不一定是优先级顺序。      |
+
+---
+
+Java 默认 `PriorityQueue` 是最小堆，如果你想实现最大堆（即优先级最高是最大值），可以传入自定义比较器：
+
+```java
+PriorityQueue<Integer> maxHeap = new PriorityQueue<>((a, b) -> b - a);
+
+maxHeap.add(30);
+maxHeap.add(10);
+maxHeap.add(20);
+
+while (!maxHeap.isEmpty()) {
+    System.out.println(maxHeap.poll());  // 输出顺序：30, 20, 10
+}
+```
 
 ---
 
@@ -284,11 +306,36 @@ public class DequeExample {
 
 ---
 
-## 核心差异总结
+### 具体用法
 
-1. **类型系统**：Java 强类型+泛型，Python 动态类型。
-2. **顺序性**：Python3.7+ `dict` 保序，Java 需 `LinkedHashMap` 或 `TreeMap`。
-3. **内置支持**：Python 大多数常用数据结构直接内置，Java 通过集合框架提供接口+实现类体系。
-4. **堆结构**：Java `PriorityQueue` 是类，Python `heapq` 是函数库。
+**Java**
+```java
+import java.util.ArrayDeque;
+import java.util.Deque;
+
+public class DequeExample {
+    public static void main(String[] args) {
+        Deque<Integer> deque = new ArrayDeque<>();
+
+        // 队尾入队
+        deque.offerLast(1);
+        deque.offerLast(2);
+
+        // 队首入队
+        deque.offerFirst(0);
+
+        // 队首出队
+        System.out.println(deque.pollFirst()); // 输出 0
+
+        // 队尾出队
+        System.out.println(deque.pollLast()); // 输出 2
+    }
+}
+```
+
+**常用方法**
+* `offerFirst(x)` / `offerLast(x)`
+* `pollFirst()` / `pollLast()`
+* `peekFirst()` / `peekLast()`
 
 ---
