--- a/_posts/think-n-code/2025-06-04-Python二维列表.md
+++ b/_posts/think-n-code/2025-06-04-Python二维列表.md
@@ -1,6 +1,7 @@
 ---
 title: "Python二维列表操作技巧"
-categories: [programming]
+categories: [think-n-code]
+tags: [programming]
 
 math: true
 layout: post
