mysql logical structure

--- a/_posts/2025-04-21-图论2.md
+++ b/_posts/2025-04-21-图论2.md
@@ -66,15 +66,34 @@ layout: post
 * 路径构造（回溯类）
 
 **Python 模板（递归）**
+
+方案一：调用处判断。逻辑清晰，访问判断放在调用处，一眼看出“只有没访问的才进 dfs”。
 ```python
 def dfs(graph, node, visited):
     visited[node] = True
     for neighbor in graph[node]:
         if not visited[neighbor]:
             dfs(graph, neighbor, visited)
+
+# 调用时：
+if not visited[node]:
+    dfs(graph, node, visited)
 ```
 
-**Python 模板（非递归）**
+方案二：函数内部判断。减少调用时的判断，让 dfs 自己负责“访问控制”，代码更简洁，调用更方便。
+```python
+def dfs(graph, node, visited):
+    if visited[node]:
+        return
+    visited[node] = True
+    for neighbor in graph[node]:
+        dfs(graph, neighbor, visited)
+
+# 调用时：
+dfs(graph, node, visited)
+```
+
+**Python 模板（通过栈实现）**
 ```python
 def dfs_iterative(graph, start):
     visited = set()
@@ -203,15 +222,13 @@ def topological_sort_dfs(graph, n):
     def dfs(u):
         visited[u] = True
         for v in graph[u]:
-            if visited[v]:
-                continue
-            dfs(v)
+            if not visited[v]:
+                dfs(v)
         result.append(u)
 
     for i in range(n):
-        if visited[i]:
-            continue
-        dfs(i)
+        if not visited[i]:
+            dfs(i)
       
     return result[::-1]  # 逆后序结果即为拓扑排序
 ```
@@ -233,11 +250,11 @@ def topological_sort_with_cycle_detection(graph, n):
 
     def dfs(u):
         nonlocal has_cycle
-        if has_cycle or state[u] == 2:
-            return  # 剪枝：检测到环 或 已完成
         if state[u] == 1:
             has_cycle = True  # 回边 → 有环
             return
+        if has_cycle or state[u] == 2:
+            return  # 剪枝：检测到环 或 已完成
         state[u] = 1  # 标记访问中
         for v in graph[u]:
             dfs(v)
