--- a/_posts/think-n-code/2024-03-21-位操作.md
+++ b/_posts/think-n-code/2024-03-21-位操作.md
@@ -495,3 +495,9 @@ while t:
 ```
 
 ---
+
+## 经典例题
+
+- [1780. 判断一个数字是否可以表示成三的幂的和](https://leetcode.cn/problems/check-if-number-is-a-sum-of-powers-of-three/)
+
+---
