--- a/_posts/2024-08-21-二叉树.md
+++ b/_posts/2024-08-21-二叉树.md
@@ -70,30 +70,51 @@ Binary Search Tree，也称为**[二叉搜索树](https://zh.wikipedia.org/wiki/
 
 ![1920px-Red-black_tree_example.svg]({{ site.baseurl }}/assets/images/1920px-Red-black_tree_example.svg.png)
 
-## 二叉树的DFS与BFS遍历
+## 二叉树遍历
 
-[参考链接DFS](https://zh.wikipedia.org/wiki/%E6%B7%B1%E5%BA%A6%E4%BC%98%E5%85%88%E6%90%9C%E7%B4%A2)；[参考链接BFS](https://zh.wikipedia.org/wiki/%E5%B9%BF%E5%BA%A6%E4%BC%98%E5%85%88%E6%90%9C%E7%B4%A2)
+### 层次遍历
 
-**深度优先搜索算法**（英语：Depth-First-Search，DFS）。沿着树的深度遍历树的节点，尽可能深的搜索树的分支。当节点v的所在边都己被探寻过，搜索将回溯到发现节点v的那条边的起始节点。
+层序遍历就是按照 从上到下、从左到右 的顺序，一层一层访问二叉树的节点。 它是 广度优先搜索 (BFS) 在二叉树上的应用。
 
-**广度优先搜索算法**（英语：Breadth-First-Search，缩写为BFS）。简单的说，BFS是从根节点开始，沿着树的宽度遍历树的节点。如果所有节点均被访问，则算法中止。
+- [102. 二叉树的层序遍历](https://leetcode.cn/problems/binary-tree-level-order-traversal/)
 
-## 先序、中序、后序遍历
+```java
+public List<Integer> levelOrder(TreeNode root) {
+    List<Integer> res = new ArrayList<>();
+    if (root == null) return res;
 
-[参考链接](https://www.jianshu.com/p/456af5480cee)
+    Queue<TreeNode> queue = new LinkedList<>();
+    queue.offer(root);
 
-前序、中序、后序遍历利用 DFS 实现。
+    while (!queue.isEmpty()) {
+        TreeNode node = queue.poll();
+        res.add(node.val);
 
-先序：考察到一个节点后，即刻输出该节点的值，并继续遍历其左右子树。(根左右)
-中序：考察到一个节点后，将其暂存，遍历完左子树后，再输出该节点的值，然后遍历右子树。(左根右)
-后序：考察到一个节点后，将其暂存，遍历完左右子树后，再输出该节点的值。(左右根)
-Tips：无论先序、中序、后序，对节点的考查（不一定输出）顺序都是一样的。
+        if (node.left != null) queue.offer(node.left);
+        if (node.right != null) queue.offer(node.right);
+    }
+
+    return res;
+}
+```
+
+---
+
+### 先/中/后序遍历
+
+- 先序(根左右)：考察到一个节点后，即刻输出该节点的值，并继续遍历其左右子树
+- 中序(左根右)：考察到一个节点后，将其暂存，遍历完左子树后，再输出该节点的值，然后遍历右子树
+- 后序(左右根)：考察到一个节点后，将其暂存，遍历完左右子树后，再输出该节点的值
+
+> Tips：无论先序、中序、后序，对节点的考查（不一定输出）顺序都是一样的。
 
 ![2405011-5f5b0b136713f744]({{ site.baseurl }}/assets/images/2405011-5f5b0b136713f744-1558060683243.jpg)
 
-### 递归实现遍历
+---
 
-仅输出节点顺序不同
+**通过递归实现先/中/后序遍历**：
+
+代码模板一致，仅节点处理的顺序不同
 
 ```java
 public static void recursionTravesal(TreeNode root) {
@@ -107,85 +128,94 @@ public static void recursionTravesal(TreeNode root) {
 }
 ```
 
-### 迭代实现遍历
+---
 
-迭代遍历时，因为需要在遍历完节点的左子树时接着遍历节点的右子树，为了能找到该节点，需要使用**栈**来进行暂存。先序、中序与后序都涉及到了**回溯**，因此都需要栈。
+**通过迭代实现先/中/后序遍历**：
 
-1. 先序遍历（遍历过程见注释）
+因为需要在遍历完节点的左子树时接着遍历节点的右子树，为了能找到该节点，需要使用**栈**来进行暂存。
 
-   ```java
-   public void preorderTraversal(TreeNode root) {
-           Stack<TreeNode> stack = new Stack<TreeNode>(); // 用来暂存节点
-           TreeNode curNode = root;
-       	// 当且仅当，该节点的左右子树为空（此时该节点已输出），且栈也为空，结束循环
-           while (curNode != null || !stack.isEmpty()) { 
-               // 若当前考查节点非空，则输出该节点的值
-               while (curNode != null) {
-                   System.out.println(curNode.val); // 先序遍历
-                   stack.add(curNode);
-                   curNode = curNode.left;
-               }
-               // 一直到左子树为空，开始考查右子树
-               curNode = stack.pop().right; // 弹出栈顶元素，将游标等于该节点的右子树
-           }
-       }
-   ```
+**先序遍历**
+- [144. 二叉树的前序遍历](https://leetcode.cn/problems/binary-tree-preorder-traversal/)
 
-2. 中序遍历
-
-   ```java
-   public List<Integer> inorderTraversal(TreeNode root) {
-       List<Integer> ret = new ArrayList<Integer>();
-       Stack<TreeNode> stack = new Stack<TreeNode>();// 后进先出
+```java
+public void preorderTraversal(TreeNode root) {
+       Stack<TreeNode> stack = new Stack<TreeNode>(); // 用来暂存节点
        TreeNode curNode = root;
-       while (curNode != null || !stack.empty()) {
+    // 当且仅当，该节点的左右子树为空（此时该节点已输出），且栈也为空，结束循环
+       while (curNode != null || !stack.isEmpty()) { 
+           // 若当前考查节点非空，则输出该节点的值
            while (curNode != null) {
+               System.out.println(curNode.val); // 先序遍历
                stack.add(curNode);
                curNode = curNode.left;
            }
-           curNode = stack.pop();
-           ret.add(curNode.val); // 中序遍历
+           // 一直到左子树为空，开始考查右子树
+           curNode = stack.pop().right; // 弹出栈顶元素，将游标等于该节点的右子树
+       }
+   }
+```
+
+---
+
+**中序遍历**
+- [94. 二叉树的中序遍历](https://leetcode.cn/problems/binary-tree-inorder-traversal/)
+
+```java
+public List<Integer> inorderTraversal(TreeNode root) {
+   List<Integer> ret = new ArrayList<Integer>();
+   Stack<TreeNode> stack = new Stack<TreeNode>();// 后进先出
+   TreeNode curNode = root;
+   while (curNode != null || !stack.empty()) {
+       while (curNode != null) {
+           stack.add(curNode);
+           curNode = curNode.left;
+       }
+       curNode = stack.pop();
+       ret.add(curNode.val); // 中序遍历
+       curNode = curNode.right;
+   }
+   return ret;
+}
+```
+
+---
+
+**后序遍历**
+- [145. 二叉树的后序遍历](https://leetcode.cn/problems/binary-tree-postorder-traversal/)
+
+后序遍历与先序、中序遍历不一样之处在于，后序遍历在输出该节点值时，需要考虑其左右之树是否已经遍历完成。
+
+所以需要设置一个lastVisit游标，当lastVisit等于当前考查节点的右子树，表示该节点的左右子树都已经遍历完成，可以输出当前节点值。
+
+![2405011-a3b88566f13549af]({{ site.baseurl }}/assets/images/2405011-a3b88566f13549af.jpg)
+
+```java
+public List<Integer> postorderTraversal(TreeNode root) {
+   List<Integer> ret = new ArrayList<Integer>();
+   Stack<TreeNode> stack = new Stack<TreeNode>();
+   TreeNode curNode = root;
+   TreeNode lastVisit = root;
+   while (curNode != null || !stack.empty()) {
+       while (curNode != null) {
+           stack.add(curNode);
+           curNode = curNode.left;
+       }
+       curNode = stack.peek(); // 后续遍历
+       // 如果右子树为空或者已经访问，即可输出当前节点值
+       if (curNode.right == null || curNode.right == lastVisit) {
+           ret.add(curNode.val);
+           stack.pop(); // 此时，才可删除元素
+           lastVisit = curNode; // 更新lastVisit，回到上一层时还会用到
+           curNode = null; // 需将curNode设为空，下一轮即可访问栈顶元素
+       } else { // 否则，继续遍历右节点
            curNode = curNode.right;
        }
-       return ret;
    }
-   ```
+   return ret;
+}
+```
 
-3. 后序遍历
-
-   后序遍历与先序、中序遍历不一样之处在于，后序遍历在输出该节点值时，需要考虑其左右之树是否已经遍历完成。
-
-   所以需要设置一个lastVisit游标，当lastVisit等于当前考查节点的右子树，表示该节点的左右子树都已经遍历完成，可以输出当前节点值。
-
-   ![2405011-a3b88566f13549af]({{ site.baseurl }}/assets/images/2405011-a3b88566f13549af.jpg)
-
-   ```java
-   public List<Integer> postorderTraversal(TreeNode root) {
-       List<Integer> ret = new ArrayList<Integer>();
-       Stack<TreeNode> stack = new Stack<TreeNode>();
-       TreeNode curNode = root;
-       TreeNode lastVisit = root;
-       while (curNode != null || !stack.empty()) {
-           while (curNode != null) {
-               stack.add(curNode);
-               curNode = curNode.left;
-           }
-           curNode = stack.peek(); // 后续遍历
-           // 如果右子树为空或者已经访问，即可输出当前节点值
-           if (curNode.right == null || curNode.right == lastVisit) {
-               ret.add(curNode.val);
-               stack.pop(); // 此时，才可删除元素
-               lastVisit = curNode; // 更新lastVisit，回到上一层时还会用到
-               curNode = null; // 需将curNode设为空，下一轮即可访问栈顶元素
-           } else { // 否则，继续遍历右节点
-               curNode = curNode.right;
-           }
-       }
-       return ret;
-   }
-   ```
-
-
+---
 
 ## 经典例题
 
