--- a/_posts/think-n-code/2024-03-21-位操作.md
+++ b/_posts/think-n-code/2024-03-21-位操作.md
@@ -249,6 +249,11 @@ print(is_power_of_two(10))  # False
 * 2 的幂在二进制中只有一个 1
 * `x & (x - 1)` 可以去掉这个 1，所以结果应为 0
 
+**经典例题**
+- [326. 3 的幂](https://leetcode.cn/problems/power-of-three/)
+- [1780. 判断一个数字是否可以表示成三的幂的和](https://leetcode.cn/problems/check-if-number-is-a-sum-of-powers-of-three/)
+- [342. 4的幂](https://leetcode.cn/problems/power-of-four/)
+
 ---
 
 ## 复杂位操作技巧
@@ -493,11 +498,5 @@ while t:
     i = lowbit.bit_length() - 1
     # 处理 i 的逻辑
 ```
-
----
-
-## 经典例题
-
-- [1780. 判断一个数字是否可以表示成三的幂的和](https://leetcode.cn/problems/check-if-number-is-a-sum-of-powers-of-three/)
 
 ---
