--- a/_posts/2024-08-21-二叉树.md
+++ b/_posts/2024-08-21-二叉树.md
@@ -11,16 +11,12 @@ layout: post
 
 ## 树的实现
 
-```java
-class TreeNode {
-    int val;
-    TreeNode left;
-    TreeNode right;
-
-    TreeNode(int x) {
-        val = x;
-    }
-}
+```python
+class TreeNode:
+    def __init__(self, val=0, left=None, right=None):
+        self.val = val
+        self.left = left
+        self.right = right
 ```
 
 ## 一些常见的树
@@ -60,17 +56,21 @@ Binary Search Tree，也称为**[二叉搜索树](https://zh.wikipedia.org/wiki/
 
 ### 红黑树
 
-[红黑树](https://zhuanlan.zhihu.com/p/31805309)，Red-black Tree，是一种自平衡二叉查找树，典型的用途是**关联数组**。在二叉查找树强制的一般要求外，对于任何有效的红黑树，我们增加了如下额外的要求：
+[红黑树](https://zh.wikipedia.org/wiki/%E7%BA%A2%E9%BB%91%E6%A0%91)，Red-black Tree，是一种自平衡二叉查找树，典型的用途是**关联数组**。
 
-- 节点是红色或黑色
-- 根是黑色
-- 所有叶子都是黑色（叶子是NIL节点（空节点））
-- 每个红色节点必须有两个黑色的子节点
-- 从任一节点到其每个叶子的所有简单路劲都要包含相同数目的黑色节点。
+在二叉查找树强制的一般要求外，对于任何有效的红黑树，我们增加了如下额外的要求：
+* 节点是红色或黑色。
+* 根是黑色。
+* 所有叶子都是黑色（叶子是NIL节点）。
+* 每个红色节点必须有两个黑色的子节点。
+  * 或者说从每个叶子到根的所有路径上不能有两个连续的红色节点。
+  * 或者说不存在两个相邻的红色节点，相邻指两个节点是父子关系。
+  * 或者说红色节点的父节点和子节点均是黑色的。
+* 从任一节点到其每个叶子的所有简单路径都包含相同数目的黑色节点。
 
 ![1920px-Red-black_tree_example.svg]({{ site.baseurl }}/assets/images/1920px-Red-black_tree_example.svg.png)
 
-## 二叉树遍历
+## 遍历
 
 ### 层次遍历
 
@@ -79,23 +79,21 @@ Binary Search Tree，也称为**[二叉搜索树](https://zh.wikipedia.org/wiki/
 - [102. 二叉树的层序遍历](https://leetcode.cn/problems/binary-tree-level-order-traversal/)
 
 ```java
-public List<Integer> levelOrder(TreeNode root) {
-    List<Integer> res = new ArrayList<>();
-    if (root == null) return res;
-
-    Queue<TreeNode> queue = new LinkedList<>();
-    queue.offer(root);
-
-    while (!queue.isEmpty()) {
-        TreeNode node = queue.poll();
-        res.add(node.val);
-
-        if (node.left != null) queue.offer(node.left);
-        if (node.right != null) queue.offer(node.right);
-    }
-
-    return res;
-}
+class Solution:
+    def levelOrder(self, root: Optional[TreeNode]) -> List[List[int]]:
+        if root is None:
+            return []
+        ans = []
+        q = deque([root])
+        while q:
+            vals = []
+            for _ in range(len(q)):
+                node = q.popleft()
+                vals.append(node.val)
+                if node.left:  q.append(node.left)
+                if node.right: q.append(node.right)
+            ans.append(vals)
+        return ans
 ```
 
 ---
@@ -113,46 +111,45 @@ public List<Integer> levelOrder(TreeNode root) {
 ---
 
 **通过递归实现先/中/后序遍历**：
-
 代码模板一致，仅节点处理的顺序不同
 
-```java
-public static void recursionTravesal(TreeNode root) {
-    if (root != null) {
-        // System.out.println(root.val); // 先序遍历
-        recursionTravesal(root.left);
-        // System.out.println(root.val); // 中序遍历
-        recursionTravesal(root.right);
-        System.out.println(root.val); // 后序遍历
-    }
-}
-```
+**通过迭代实现先/中/后序遍历**：
+因为需要在遍历完节点的左子树时接着遍历节点的右子树，为了能找到该节点，需要使用**栈**来进行暂存。
 
 ---
-
-**通过迭代实现先/中/后序遍历**：
-
-因为需要在遍历完节点的左子树时接着遍历节点的右子树，为了能找到该节点，需要使用**栈**来进行暂存。
 
 **先序遍历**
 - [144. 二叉树的前序遍历](https://leetcode.cn/problems/binary-tree-preorder-traversal/)
 
-```java
-public void preorderTraversal(TreeNode root) {
-       Stack<TreeNode> stack = new Stack<TreeNode>(); // 用来暂存节点
-       TreeNode curNode = root;
-    // 当且仅当，该节点的左右子树为空（此时该节点已输出），且栈也为空，结束循环
-       while (curNode != null || !stack.isEmpty()) { 
-           // 若当前考查节点非空，则输出该节点的值
-           while (curNode != null) {
-               System.out.println(curNode.val); // 先序遍历
-               stack.add(curNode);
-               curNode = curNode.left;
-           }
-           // 一直到左子树为空，开始考查右子树
-           curNode = stack.pop().right; // 弹出栈顶元素，将游标等于该节点的右子树
-       }
-   }
+递归实现
+```python
+class Solution:
+    def preorderTraversal(self, root: Optional[TreeNode]) -> List[int]:
+        ans = []
+        def dfs(node):
+            if node is None:
+                return
+            ans.append(node.val)
+            dfs(node.left)
+            dfs(node.right)
+        dfs(root)
+        return ans
+```
+
+迭代实现
+```python
+class Solution:
+    def preorderTraversal(self, root: Optional[TreeNode]) -> List[int]:
+        ans = []
+        cur = root
+        stack = []
+        while cur or stack:
+            while cur:
+                stack.append(cur)
+                ans.append(cur.val)
+                cur = cur.left
+            cur = stack.pop().right
+        return ans
 ```
 
 ---
@@ -160,22 +157,36 @@ public void preorderTraversal(TreeNode root) {
 **中序遍历**
 - [94. 二叉树的中序遍历](https://leetcode.cn/problems/binary-tree-inorder-traversal/)
 
-```java
-public List<Integer> inorderTraversal(TreeNode root) {
-   List<Integer> ret = new ArrayList<Integer>();
-   Stack<TreeNode> stack = new Stack<TreeNode>();// 后进先出
-   TreeNode curNode = root;
-   while (curNode != null || !stack.empty()) {
-       while (curNode != null) {
-           stack.add(curNode);
-           curNode = curNode.left;
-       }
-       curNode = stack.pop();
-       ret.add(curNode.val); // 中序遍历
-       curNode = curNode.right;
-   }
-   return ret;
-}
+递归实现
+```python
+class Solution:
+    def inorderTraversal(self, root: Optional[TreeNode]) -> List[int]:
+        ans = []
+        def dfs(node):
+            if node is None:
+                return
+            dfs(node.left)
+            ans.append(node.val)
+            dfs(node.right)
+        dfs(root)
+        return ans
+```
+
+迭代实现
+```python
+class Solution:
+    def inorderTraversal(self, root: Optional[TreeNode]) -> List[int]:
+        ans = []
+        stack = []
+        cur = root
+        while cur or stack:
+            while cur:
+                stack.append(cur)
+                cur = cur.left
+            cur = stack.pop()
+            ans.append(cur.val)
+            cur = cur.right
+        return ans
 ```
 
 ---
@@ -183,58 +194,119 @@ public List<Integer> inorderTraversal(TreeNode root) {
 **后序遍历**
 - [145. 二叉树的后序遍历](https://leetcode.cn/problems/binary-tree-postorder-traversal/)
 
-后序遍历与先序、中序遍历不一样之处在于，后序遍历在输出该节点值时，需要考虑其左右之树是否已经遍历完成。
+递归实现
+```python
+class Solution:
+    def inorderTraversal(self, root: Optional[TreeNode]) -> List[int]:
+        ans = []
+        def dfs(node):
+            if node is None:
+                return
+            dfs(node.left)
+            dfs(node.right)
+            ans.append(node.val)
+        dfs(root)
+        return ans
+```
 
-所以需要设置一个lastVisit游标，当lastVisit等于当前考查节点的右子树，表示该节点的左右子树都已经遍历完成，可以输出当前节点值。
+迭代实现
+
+后序遍历与先序、中序遍历不一样之处在于：**后序遍历在输出当前节点值时，需要考虑其左右之树是否已经遍历完成。**
+
+> 所以，需要设置一个lastVisit游标。当lastVisit等于当前节点的右子树，表示该节点的左右子树都已经遍历完成，才可以输出当前节点值。
 
 ![2405011-a3b88566f13549af]({{ site.baseurl }}/assets/images/2405011-a3b88566f13549af.jpg)
 
-```java
-public List<Integer> postorderTraversal(TreeNode root) {
-   List<Integer> ret = new ArrayList<Integer>();
-   Stack<TreeNode> stack = new Stack<TreeNode>();
-   TreeNode curNode = root;
-   TreeNode lastVisit = root;
-   while (curNode != null || !stack.empty()) {
-       while (curNode != null) {
-           stack.add(curNode);
-           curNode = curNode.left;
-       }
-       curNode = stack.peek(); // 后续遍历
-       // 如果右子树为空或者已经访问，即可输出当前节点值
-       if (curNode.right == null || curNode.right == lastVisit) {
-           ret.add(curNode.val);
-           stack.pop(); // 此时，才可删除元素
-           lastVisit = curNode; // 更新lastVisit，回到上一层时还会用到
-           curNode = null; // 需将curNode设为空，下一轮即可访问栈顶元素
-       } else { // 否则，继续遍历右节点
-           curNode = curNode.right;
-       }
-   }
-   return ret;
-}
+```python
+class Solution:
+    def postorderTraversal(self, root: Optional[TreeNode]) -> List[int]:
+        ans = []
+        stack = []
+        cur = root
+        last_vst = None
+        while cur or stack:
+            while cur:
+                stack.append(cur)
+                cur = cur.left
+            cur = stack[-1]
+            if cur.right is None or cur.right == last_vst:
+                ans.append(cur.val)
+                cur = stack.pop()
+                last_vst = cur
+                cur = None
+            else:
+                cur = cur.right
+        return ans
 ```
 
 ---
 
-## 经典例题
+## 递归与分治
 
-### 递归
+> 二叉树天然适合递归：根节点 + 左子树 + 右子树
 
-一棵树要么是空树，要么有两个指针，每个指针指向一棵树。树是一种递归结构，很多树的问题可以使用递归来处理。
+* **题型**：
 
-#### 二叉树的深度
+  * 求树的高度 / 节点数
+  * 子树判断 / 相同树判断
+  * 翻转二叉树
 
-[二叉树的深度](https://leetcode-cn.com/problems/maximum-depth-of-binary-tree/)。二叉树的深度为根节点到最远叶子节点的最长路径上的节点数。
+* **题目**：
+  * [LeetCode 104. 二叉树的最大深度](https://leetcode.cn/problems/maximum-depth-of-binary-tree/)
+  * [LeetCode 226. 翻转二叉树](https://leetcode.cn/problems/invert-binary-tree/)
+  * [LeetCode 100. 相同的树](https://leetcode.cn/problems/same-tree/)
 
-```java
-public int maxDepth(TreeNode root) {
-    if (root == null) return 0;
-    return Math.max(maxDepth(root.left), maxDepth(root.right)) + 1;
-}
-```
+---
 
-#### 修剪二叉搜索树
+## 回溯/路径搜索
+
+> 在 DFS 过程中记录路径，常用于“路径和/所有路径”问题。
+
+* **题型**：
+
+  * 根到叶路径
+  * 路径总和
+
+* **题目**：
+
+  * [LeetCode 112. 路径总和](https://leetcode.cn/problems/path-sum/)
+  * [LeetCode 113. 路径总和 II](https://leetcode.cn/problems/path-sum-ii/)
+  * [LeetCode 257. 二叉树的所有路径](https://leetcode.cn/problems/binary-tree-paths/)
+
+---
+
+## 树形DP
+
+> 在每个节点上用状态表示子树结果，然后组合左右子树解答。
+
+* **题型**：
+
+  * 树的直径
+  * 树上的最大路径和
+  * 树形打家劫舍
+
+* **题目**：
+
+  * [LeetCode 543. 二叉树的直径](https://leetcode.cn/problems/diameter-of-binary-tree/)
+  * [LeetCode 124. 二叉树中的最大路径和](https://leetcode.cn/problems/binary-tree-maximum-path-sum/)
+  * [LeetCode 337. 打家劫舍 III](https://leetcode.cn/problems/house-robber-iii/)
+
+---
+
+## 构造与还原
+
+> 通过遍历结果（前序+中序 / 后序+中序）还原二叉树。
+
+* **题目**：
+
+  * [LeetCode 105. 从前序与中序遍历序列构造二叉树](https://leetcode.cn/problems/construct-binary-tree-from-preorder-and-inorder-traversal/)
+  * [LeetCode 106. 从中序与后序遍历序列构造二叉树](https://leetcode.cn/problems/construct-binary-tree-from-inorder-and-postorder-traversal/)
+
+---
+
+## 经典题目
+
+### 修剪二叉搜索树
 
 [修剪二叉搜索树](https://leetcode-cn.com/problems/trim-a-binary-search-tree/)。通过修剪二叉搜索树，使得所有节点的值在`[L, R]`中 (R>=L) 。你可能需要改变树的根节点，所以结果应当返回修剪好的二叉搜索树的新的根节点。
 
@@ -249,7 +321,7 @@ public TreeNode trimBST(TreeNode root, int L, int R) {
 }
 ```
 
-#### 二叉搜索树中第K小的元素
+### 二叉搜索树中第K小的元素
 
 [二叉搜索树中第K小的元素](https://leetcode-cn.com/problems/kth-smallest-element-in-a-bst/)。给定一个二叉搜索树，查找其中第 **k** 个最小的元素。
 
@@ -310,7 +382,7 @@ TreeNode KthNode(TreeNode root, int k){
 }
 ```
 
-#### 判断是否为平衡二叉树
+### 判断是否为平衡二叉树
 
 给定一个二叉树，判断它是否是[平衡二叉树](https://leetcode-cn.com/problems/balanced-binary-tree/)。
 
@@ -333,7 +405,7 @@ public int depth(TreeNode root){
 }
 ```
 
-#### 相同节点值的最大路径长度
+### 相同节点值的最大路径长度
 
 [相同节点值的最大路径长度](https://leetcode-cn.com/problems/longest-univalue-path/)。给定一个二叉树，找到最长的路径，这个路径中的每个节点具有相同值。 这条路径可以经过也可以不经过根节点。
 
@@ -356,7 +428,7 @@ private int dfs(TreeNode root){
 }
 ```
 
-#### 把二叉搜索树转换为累加树
+### 把二叉搜索树转换为累加树
 
 [把二叉搜索树转换为累加树](https://leetcode-cn.com/problems/convert-bst-to-greater-tree/)。给定一个二叉搜索树（Binary Search Tree），把它转换成为累加树（Greater Tree)，使得每个节点的值是原来的节点值加上所有大于它的节点值之和。
 
@@ -373,51 +445,6 @@ private void rightSum(TreeNode node) {
     sum += node.val;
     node.val = sum;
     rightSum(node.left);
-}
-```
-
-### 层次遍历
-
-利用**BFS**实现层次遍历。不需要使用两个队列来分别存储当前层的节点和下一层的节点。利用开始遍历时，队列中的节点数保证当前层的节点数。
-
-#### 找树左下角的值
-
-[找树左下角的值](https://leetcode-cn.com/problems/find-bottom-left-tree-value/)。给定一个二叉树，在树的最后一行找到最左边的值。
-
-```java
-public int findBottomLeftValue(TreeNode root) {
-    Queue<TreeNode> queue = new LinkedList<>();
-    queue.add(root);
-    while (!queue.isEmpty()) {
-        root = queue.poll();
-        if (root.right != null) queue.add(root.right);
-        if (root.left != null) queue.add(root.left);
-    }
-    return root.val;
-}
-```
-
-#### 二叉树的层平均值
-
-[二叉树的层平均值](https://leetcode-cn.com/problems/average-of-levels-in-binary-tree/)。给定一个非空二叉树, 返回一个由每层节点平均值组成的数组.
-
-```java
-public List<Double> averageOfLevels(TreeNode root) {
-    List<Double> ret = new ArrayList<>();
-    Queue<TreeNode> queue = new LinkedList<>();
-    queue.add(root);
-    while (!queue.isEmpty()) {
-        int cnt = queue.size();
-        double sum = 0;
-        for (int i = 0; i < cnt; i++) {
-            TreeNode node = queue.poll();
-            sum += node.val;
-            if (node.left != null) queue.add(node.left);
-            if (node.right != null) queue.add(node.right);
-        }
-        ret.add(sum / cnt);
-    }
-    return ret;
 }
 ```
 
