--- a/_posts/2024-08-21-二叉树.md
+++ b/_posts/2024-08-21-二叉树.md
@@ -243,209 +243,364 @@ class Solution:
 
 ## 递归与分治
 
-> 二叉树天然适合递归：根节点 + 左子树 + 右子树
+二叉树问题几乎是 **递归和分治思想的最佳练习场**。很多题目看似复杂，其实就是把 **大问题分解为左右子树的小问题** 来解决。
 
-* **题型**：
 
-  * 求树的高度 / 节点数
-  * 子树判断 / 相同树判断
-  * 翻转二叉树
+**递归与分治的区别：**
+* **递归 (Recursion)**：函数调用自身，解决规模更小的子问题。二叉树的遍历（前序、中序、后序）就是典型递归。
+* **分治 (Divide and Conquer)**：将一个问题拆解成 **若干独立子问题**，分别求解，再合并结果。
 
-* **题目**：
-  * [LeetCode 104. 二叉树的最大深度](https://leetcode.cn/problems/maximum-depth-of-binary-tree/)
-  * [LeetCode 226. 翻转二叉树](https://leetcode.cn/problems/invert-binary-tree/)
-  * [LeetCode 100. 相同的树](https://leetcode.cn/problems/same-tree/)
+> 在二叉树中，通常就是 **把整棵树问题拆成左子树 + 右子树**。
+
+换句话说：
+* **递归是实现手段**
+* **分治是算法思想**
+
+> 二叉树的递归解法，几乎都隐含着分治思想。
+
+---
+
+**树的递归遍历**就是“递归与分治”思想的最基本的应用。
+
+以中序遍历为例：递归结构刚好契合“左子树—根—右子树”的定义。
+
+```python
+def inorder(root: TreeNode):
+    if root is None:
+        return
+    inorder(root.left)       # 左
+    print(root.val, end=" ") # 根
+    inorder(root.right)      # 右
+```
+
+**典型流程：**
+
+1. **拆解问题**：当前节点要做什么？左右子树分别要做什么？
+2. **递归求解子问题**：递归调用左右子树。
+3. **合并结果**：把左右子树结果与根节点结合。
+
+---
+
+### [104. 二叉树的最大深度](https://leetcode.cn/problems/maximum-depth-of-binary-tree/)
+
+**题目：**
+给定一个二叉树 root ，返回其最大深度。
+二叉树的 最大深度 是指从根节点到最远叶子节点的最长路径上的节点数。
+
+```python
+class Solution:
+    def maxDepth(self, root: Optional[TreeNode]) -> int:
+        if root is None: return 0
+        return max(self.maxDepth(root.left), self.maxDepth(root.right)) + 1
+```
+
+* **分解**：树的深度 = 左子树深度、右子树深度的最大值 + 1。
+* **合并**：取最大值。
+
+---
+
+### [110. 平衡二叉树](https://leetcode.cn/problems/balanced-binary-tree/)
+
+**题目：**
+给定一个二叉树，判断它是否是平衡二叉树。
+
+```python
+class Solution:
+    def isBalanced(self, root: Optional[TreeNode]) -> bool:
+        def get_height(node):
+            if node is None:
+                return 0
+            left_height = get_height(node.left)
+            if left_height == -1:
+                return -1
+            right_height = get_height(node.right)
+            if right_height == -1 or abs(left_height - right_height) > 1:
+                return -1
+            return max(left_height, right_height) + 1
+        return get_height(root) != -1
+```
+
+* **分解**：判断一棵树是否平衡，需要左右子树都平衡，且高度差 ≤ 1。
+* **合并**：用高度作为子问题结果，结合左右子树的判断。
+
+---
+
+### 小结
+
+二叉树的题目，本质就是 **定义函数 → 拆成左右子树递归 → 合并答案**。
+
+递归是代码形式，分治是思维模式。
+
+写二叉树递归与分治类题目，可以套 3 个步骤：
+
+1. **明确函数定义**：
+
+   * 输入参数是什么？
+   * 输出代表什么（如高度、布尔值、路径和等）？
+
+2. **拆解子问题**：
+
+   * 当前节点要做的事？
+   * 左右子树分别怎么处理？
+
+3. **合并子结果**：
+
+   * 左右子树结果 + 根节点 → 返回给上层。
 
 ---
 
 ## 回溯/路径搜索
 
-> 在 DFS 过程中记录路径，常用于“路径和/所有路径”问题。
+在二叉树题目中，**回溯（Backtracking）** 主要应用于 **路径相关问题**。其核心思想是：
 
-* **题型**：
+* **沿着根到叶的路径进行探索**；
+* **在进入子树前做选择，退出子树时撤销选择**。
 
-  * 根到叶路径
-  * 路径总和
+这样可以枚举所有可能的路径，常见于 **路径和、所有路径、路径匹配** 等题型。
 
-* **题目**：
+---
 
-  * [LeetCode 112. 路径总和](https://leetcode.cn/problems/path-sum/)
-  * [LeetCode 113. 路径总和 II](https://leetcode.cn/problems/path-sum-ii/)
-  * [LeetCode 257. 二叉树的所有路径](https://leetcode.cn/problems/binary-tree-paths/)
+**方法思路**
+1. **递归下探**：将当前节点加入路径。
+2. **到达叶子 / 终止条件**：检查当前路径是否满足要求（如和为 target）。
+3. **回溯撤销**：退出该节点时，把它从路径中移除，回到上层继续搜索。
+
+这类题和普通递归的区别在于：
+* 普通递归只关心**结果值**（如深度、高度）；
+* 回溯递归则需要维护一条**路径状态**，并在递归返回时撤销。
+
+---
+
+### [257. 二叉树的所有路径](https://leetcode.cn/problems/binary-tree-paths/)
+
+**题目**：
+给你一个二叉树的根节点 root ，按 任意顺序 ，返回所有从根节点到叶子节点的路径。
+叶子节点 是指没有子节点的节点。
+
+**思路要点**：
+* `path` 维护一条从根到当前节点的路径。
+* 每次进入节点 → `path.append()`
+* 递归子树 → 搜索继续
+* 回溯 → `path.pop()`
+
+```python
+class Solution:
+    def binaryTreePaths(self, root: Optional[TreeNode]) -> List[str]:
+        ans = []
+        path = []
+
+        def dfs(node):
+            if node is None:
+                return
+            path.append(str(node.val))
+            if node.left is None and node.right is None:
+                ans.append("->".join(path))
+            else:
+                dfs(node.left)
+                dfs(node.right)
+            path.pop()
+        dfs(root)
+        return ans
+```
+
+---
+
+### [113. 路径总和 II](https://leetcode.cn/problems/path-sum-ii/)
+
+**题目**：
+给你二叉树的根节点 root 和一个整数目标和 targetSum ，找出所有 从根节点到叶子节点 路径总和等于给定目标和的路径。
+叶子节点 是指没有子节点的节点。
+
+**思路要点**：
+* `left` 记录剩余和。
+* 到叶子时判断 `left == 0`。
+* 回溯清理路径，保证路径状态不污染。
+
+```python
+class Solution:
+    def pathSum(self, root: Optional[TreeNode], targetSum: int) -> List[List[int]]:
+        ans = []
+        path = []
+        def dfs(node, left):
+            if node is None:
+                return 
+            path.append(node.val)
+            left -= node.val
+            if node.left is None and node.right is None and left == 0:
+                ans.append(path.copy())
+            else:
+                dfs(node.left, left)
+                dfs(node.right, left)
+            path.pop()
+        dfs(root, targetSum)
+        return ans
+```
+
+---
+
+### [437. 路径总和 III](https://leetcode.cn/problems/path-sum-iii/)
+
+**题目**：
+给定一个二叉树的根节点 root ，和一个整数 targetSum ，求该二叉树里节点值之和等于 targetSum 的 路径 的数目。
+
+路径 不需要从根节点开始，也不需要在叶子节点结束，但是路径方向必须是向下的（只能从父节点到子节点）。
+
+**思路要点**：
+* 这种题更偏 **前缀和 + 回溯**，需要在递归中维护状态。
+* 写法复杂，但本质依旧是路径搜索。
+
+```python
+class Solution:
+    def pathSum(self, root: Optional[TreeNode], targetSum: int) -> int:
+        ans = 0
+        cnt = defaultdict(int)
+        cnt[0] = 1
+
+        def dfs(node: Optional[TreeNode], s: int) -> None:
+            if node is None:
+                return
+
+            nonlocal ans
+            s += node.val
+            # 把 node 当作路径的终点，统计有多少个起点
+            ans += cnt[s - targetSum]
+
+            cnt[s] += 1
+            dfs(node.left, s)
+            dfs(node.right, s)
+            cnt[s] -= 1  # 恢复现场
+
+        dfs(root, 0)
+        return ans
+```
+
+---
+
+### 小结
+
+* **回溯 / 路径搜索** 适合处理「路径相关」问题：
+  * 要么找 **是否存在** 某条路径；
+  * 要么收集 **所有路径**。
+
+* 特点是 **路径状态随递归维护**，需要 **进入时选择、退出时撤销**。
+
+* 和普通递归/分治、树形 DP 最大的不同是：
+  * **回溯强调路径（动态过程）**，
+  * **分治强调结果合并（静态子问题）**，
+  * **树形 DP 强调状态转移（优化子结构）**。
 
 ---
 
 ## 树形DP
 
-> 在每个节点上用状态表示子树结果，然后组合左右子树解答。
+二叉树的 **树形 DP（Tree DP）** 是二叉树题目里比较高级的一个方向，常见于 **路径计算、最大独立集、状态转移优化** 等。
 
-* **题型**：
+树形 DP 是 **在树的结构上进行动态规划**。
 
-  * 树的直径
-  * 树上的最大路径和
-  * 树形打家劫舍
+* 子问题：通常是 **以某个节点为根的子树** 的最优解。
+* 状态转移：通过 **合并子树的结果** 来得到父节点的最优解。
 
-* **题目**：
-
-  * [LeetCode 543. 二叉树的直径](https://leetcode.cn/problems/diameter-of-binary-tree/)
-  * [LeetCode 124. 二叉树中的最大路径和](https://leetcode.cn/problems/binary-tree-maximum-path-sum/)
-  * [LeetCode 337. 打家劫舍 III](https://leetcode.cn/problems/house-robber-iii/)
+> 关键在于 **后序遍历**（因为要等左右子树算完，才能算父节点）。
 
 ---
 
-## 构造与还原
 
-> 通过遍历结果（前序+中序 / 后序+中序）还原二叉树。
+### [124. 二叉树中的最大路径和](https://leetcode.cn/problems/binary-tree-maximum-path-sum/)
 
-* **题目**：
+```text
+二叉树中的 路径 被定义为一条节点序列，序列中每对相邻节点之间都存在一条边。同一个节点在一条路径序列中 至多出现一次 。该路径 至少包含一个 节点，且不一定经过根节点。
 
-  * [LeetCode 105. 从前序与中序遍历序列构造二叉树](https://leetcode.cn/problems/construct-binary-tree-from-preorder-and-inorder-traversal/)
-  * [LeetCode 106. 从中序与后序遍历序列构造二叉树](https://leetcode.cn/problems/construct-binary-tree-from-inorder-and-postorder-traversal/)
+路径和 是路径中各节点值的总和。
+
+给你一个二叉树的根节点 root ，返回其 最大路径和 。
+```
+
+* 定义 `f(u)` = 以 `u` 为根的子树，**从 `u` 出发的最大路径和**。
+* 转移：
+
+  ```
+  f(u) = max(0, f(left)) + max(0, f(right)) + u.val
+  ```
+
+  （如果子树贡献为负，就不要它）
+* 全局维护最大值。
 
 ---
 
-## 经典题目
+### [543. 二叉树的直径](https://leetcode.cn/problems/diameter-of-binary-tree/)
 
-### 修剪二叉搜索树
+```text
+给你一棵二叉树的根节点，返回该树的 直径 。
 
-[修剪二叉搜索树](https://leetcode-cn.com/problems/trim-a-binary-search-tree/)。通过修剪二叉搜索树，使得所有节点的值在`[L, R]`中 (R>=L) 。你可能需要改变树的根节点，所以结果应当返回修剪好的二叉搜索树的新的根节点。
+二叉树的 直径 是指树中任意两个节点之间最长路径的 长度 。这条路径可能经过也可能不经过根节点 root 。
 
-```java
-public TreeNode trimBST(TreeNode root, int L, int R) {
-    if(root == null) return null;
-    if(root.val < L) return trimBST(root.right, L, R);
-    if(root.val > R) return trimBST(root.left, L, R);
-    root.left = trimBST(root.left, L, R);
-    root.right = trimBST(root.right, L, R);
-    return root;
-}
+两节点之间路径的 长度 由它们之间边数表示。
 ```
 
-### 二叉搜索树中第K小的元素
+* 定义 `depth(u)` = 节点 `u` 的最大深度。
+* 每次计算直径 = `depth(left) + depth(right)`。
+* 全局维护最大值。
 
-[二叉搜索树中第K小的元素](https://leetcode-cn.com/problems/kth-smallest-element-in-a-bst/)。给定一个二叉搜索树，查找其中第 **k** 个最小的元素。
-
-方法1：**根据节点的个数求解**
-
-```java
-public int kthSmallest(TreeNode root, int k) {
-    int cnt = count(root.left);
-    if(cnt == k-1) return root.val;
-    else if(cnt > k-1) return kthSmallest(root.left, k);
-    else return kthSmallest(root.right, k-cnt-1);
-}
-// 统计树的节点个数
-private int count(TreeNode node) {
-    if(node == null) return 0;
-    return 1 + count(node.left) + count(node.right);
-}
+```python
+class Solution:
+    def diameterOfBinaryTree(self, root: Optional[TreeNode]) -> int:
+        ans = 0
+        def dfs(node: Optional[TreeNode]) -> int:
+            if node is None:
+                return -1  # 对于叶子来说，链长就是 -1+1=0
+            l_len = dfs(node.left) + 1  # 左子树最大链长+1
+            r_len = dfs(node.right) + 1  # 右子树最大链长+1
+            nonlocal ans
+            ans = max(ans, l_len + r_len)  # 两条链拼成路径
+            return max(l_len, r_len)  # 当前子树最大链长
+        dfs(root)
+        return ans
 ```
 
-给定一棵二叉搜索树，请找出其中的第k小的结点。例如， （5，3，7，2，4，6，8）    中，按结点数值大小顺序第三小结点的值为4。
+---
 
-方法2：**根据中序遍历求解**：二叉搜索树按照中序遍历的顺序打印出来正好就是排序好的顺序。所以，按照中序遍历顺序找到第k个结点就是结果。
+### 最大独立集（树上选点问题）
 
-方法2-1：**递归解法**
+在二叉树中选点，不能选相邻的父子节点，求最大权值和。
 
-```java
-private int index = 0;
-TreeNode KthNode(TreeNode root, int k){
-    if(root != null){
-        TreeNode cur = KthNode(root.left, k);
-        if(cur != null)	return cur; // 左子树中找到符合要求的节点返回
-        index ++;
-        if(index == k)	return root; // 从最左节点开始，count+1；
-        cur = KthNode(root.right, k);
-        if(cur != null)	return cur; //左子树没找到，在右子树找到了符合要求的节点返回
-    }
-    return null;
-}
-```
+* 定义状态：
 
-方法2-2：**迭代解法**
+  * `dp[u][0]` = 不选 `u` 的最大值
+  * `dp[u][1]` = 选 `u` 的最大值
+* 转移：
 
-```java
-TreeNode KthNode(TreeNode root, int k){
-    if(root == null || k <= 0) return null;
-    Stack<TreeNode> stack = new Stack<TreeNode>();
-    while(root != null || !stack.isEmpty()){
-        while(root != null){
-            stack.push(root);
-            root = root.left;
-        }
-        TreeNode cur = stack.pop();
-        k--;
-        if(k == 0)	return cur;
-        root = cur.right;
-    }
-    return null;
-}
-```
+  ```
+  dp[u][0] = sum( max(dp[v][0], dp[v][1]) )   // 子节点随意
+  dp[u][1] = u.val + sum( dp[v][0] )          // 子节点不能选
+  ```
 
-### 判断是否为平衡二叉树
+---
 
-给定一个二叉树，判断它是否是[平衡二叉树](https://leetcode-cn.com/problems/balanced-binary-tree/)。
+### 路径计数 / 分割方案
 
-一个二叉树每个节点的左右两个子树的高度差的绝对值不超过1。
+从根到叶子的路径和 == target 的条数。
 
-```java
-boolean flag = true;
+* 思路：
 
-public boolean IsBalanced_Solution(TreeNode root) {
-    depth(root);
-    return flag;
-}
+  * 用递归函数返回「从当前节点出发能组成 target 的方案数」。
+  * 或者在 DFS 时记录路径，然后用回溯做加法/减法。
 
-public int depth(TreeNode root){
-    if(root == null) return 0;
-    int left = depth(root.left);
-    int right = depth(root.right);
-    if(Math.abs(left - right) > 1) flag = false;
-    return Math.max(left, right) + 1;
-}
-```
+---
 
-### 相同节点值的最大路径长度
+### 状态机 DP on 树
 
-[相同节点值的最大路径长度](https://leetcode-cn.com/problems/longest-univalue-path/)。给定一个二叉树，找到最长的路径，这个路径中的每个节点具有相同值。 这条路径可以经过也可以不经过根节点。
+* 类似「在树上染色」或「覆盖问题」。
+* 思路就是 **节点状态有限，依赖子树状态，进行合并**。
 
-```java
-private int path = 0;
+---
 
-public int longestUnivaluePath(TreeNode root) {
-    dfs(root);
-    return path;
-}
+### 小结
 
-private int dfs(TreeNode root){
-    if (root == null) return 0;
-    int left = dfs(root.left);
-    int right = dfs(root.right);
-    int leftPath = root.left != null && root.left.val == root.val ? left + 1 : 0;
-    int rightPath = root.right != null && root.right.val == root.val ? right + 1 : 0;
-    path = Math.max(path, leftPath + rightPath);
-    return Math.max(leftPath, rightPath);
-}
-```
+二叉树的树形 DP 常见套路：
 
-### 把二叉搜索树转换为累加树
-
-[把二叉搜索树转换为累加树](https://leetcode-cn.com/problems/convert-bst-to-greater-tree/)。给定一个二叉搜索树（Binary Search Tree），把它转换成为累加树（Greater Tree)，使得每个节点的值是原来的节点值加上所有大于它的节点值之和。
-
-```java
-private int sum = 0;
-public TreeNode convertBST(TreeNode root) {
-    rightSum(root);
-    return root;
-}
-// 从最右侧开始对每个节点的值进行求和
-private void rightSum(TreeNode node) {
-    if(node == null) return;
-    rightSum(node.right);
-    sum += node.val;
-    node.val = sum;
-    rightSum(node.left);
-}
-```
+1. **后序遍历**（左右子树算完再算父节点）。
+2. **定义子问题**（通常是某个节点的最优解）。
+3. **设计状态转移**（结合左右子树结果）。
+4. **全局变量维护答案** 或 **dp 数组返回答案**。
 
 ---
