--- a/_posts/2024-08-21-二叉树.md
+++ b/_posts/2024-08-21-二叉树.md
@@ -19,30 +19,6 @@ class TreeNode:
         self.right = right
 ```
 
-## 一些常见的树
-
-### 满二叉树
-
-- **国内定义**：一个二叉树，每一层的结点数都达到最大值。也就是说，如果一个二叉树的层数为k，且结点总数为$2^k-1$，则它就是满二叉树（Full Binary Tree）。
-- **国外定义**：如果一个二叉树的结点要么是叶子结点，要么它有两个子结点，这样的树就是满二叉树。
-
-**国内外定义有歧义**。国内做法：
-
-- 在国际交流场合，包括学术会议发表论文等都应该使用国际定义；
-- 在国内的各种考试场合，如研究生考试、软考，使用国内教程的定义。
-
-### 完全二叉树
-
-Complete Binary Tree，除了最后一层之外的其他每一层都被完全填充，并且所有结点都保持向左对齐。
-
-### 完美二叉树
-
-Perfect Binary Tree，除了叶子结点之外的每一个结点都有两个孩子，每一层(当然包含最后一层)都被完全填充。
-
-![v2-37769edff7e51a865dadf6d111afc5f1_hd]({{ site.baseurl }}/assets/images/v2-37769edff7e51a865dadf6d111afc5f1_hd.jpg)
-
-总结：中国定义的满二叉树就是国际定义的完美二叉树。
-
 ### 二叉查找树
 
 Binary Search Tree，也称为**[二叉搜索树](https://zh.wikipedia.org/wiki/%E4%BA%8C%E5%85%83%E6%90%9C%E5%B0%8B%E6%A8%B9)**，是指一棵空树或者具有以下性质的树：
@@ -241,22 +217,17 @@ class Solution:
 
 ---
 
-## 递归与分治
+## 递归/分治
 
-二叉树问题几乎是 **递归和分治思想的最佳练习场**。很多题目看似复杂，其实就是把 **大问题分解为左右子树的小问题** 来解决。
-
+树是**天然的递归结构**：每个节点的子树本身就是一棵树，因此大多数与树相关的问题，都可以通过 **递归 / 分治** 来解决。
 
 **递归与分治的区别：**
 * **递归 (Recursion)**：函数调用自身，解决规模更小的子问题。二叉树的遍历（前序、中序、后序）就是典型递归。
 * **分治 (Divide and Conquer)**：将一个问题拆解成 **若干独立子问题**，分别求解，再合并结果。
 
+换句话说：**递归是实现手段，分治是算法思想。**
+
 > 在二叉树中，通常就是 **把整棵树问题拆成左子树 + 右子树**。
-
-换句话说：
-* **递归是实现手段**
-* **分治是算法思想**
-
-> 二叉树的递归解法，几乎都隐含着分治思想。
 
 ---
 
@@ -278,6 +249,31 @@ def inorder(root: TreeNode):
 1. **拆解问题**：当前节点要做什么？左右子树分别要做什么？
 2. **递归求解子问题**：递归调用左右子树。
 3. **合并结果**：把左右子树结果与根节点结合。
+
+**具体步骤：**
+
+1. **定义递归函数**：明确函数返回值表示什么（高度？节点数？是否满足某条件？）。
+2. **递归出口**：通常是 `null` 节点，返回一个「边界值」。
+3. **递归调用**：分别递归求解左右子树。
+4. **合并结果**：使用子树结果，推导当前节点的答案。
+
+---
+
+例如：**求树的高度**
+
+* 定义：`f(node)` = 以该节点为根的子树高度
+* 出口：若 `node == null`，高度为 0
+* 分解：左子树高度 = `f(node.left)`
+* 分解：右子树高度 = `f(node.right)`
+* 合并：`f(node) = max(左, 右) + 1`
+
+核心公式：
+
+$$
+f(root) = \text{combine}(f(root.left), f(root.right))
+$$
+
+几乎所有树的递归问题都能写成这种形式。
 
 ---
 
@@ -325,49 +321,75 @@ class Solution:
 
 ---
 
-### 小结
-
-二叉树的题目，本质就是 **定义函数 → 拆成左右子树递归 → 合并答案**。
-
-递归是代码形式，分治是思维模式。
-
-写二叉树递归与分治类题目，可以套 3 个步骤：
-
-1. **明确函数定义**：
-
-   * 输入参数是什么？
-   * 输出代表什么（如高度、布尔值、路径和等）？
-
-2. **拆解子问题**：
-
-   * 当前节点要做的事？
-   * 左右子树分别怎么处理？
-
-3. **合并子结果**：
-
-   * 左右子树结果 + 根节点 → 返回给上层。
-
----
-
 ## 回溯/路径搜索
 
-在二叉树题目中，**回溯（Backtracking）** 主要应用于 **路径相关问题**。其核心思想是：
+二叉树的「回溯 / 路径搜索」问题，通常都围绕 **“从根到叶的一条路径”** 展开。
 
-* **沿着根到叶的路径进行探索**；
-* **在进入子树前做选择，退出子树时撤销选择**。
+**典型形式：**
 
-这样可以枚举所有可能的路径，常见于 **路径和、所有路径、路径匹配** 等题型。
+* 找到所有路径
+* 找到满足条件的路径（如和为某个数）
+* 找到最长 / 最短路径
+* 判断是否存在路径
+
+**回溯的关键点**：
+
+1. **选择**：进入某个子节点。
+2. **递归**：继续向下探索。
+3. **撤销选择**：返回上一层时，要把路径恢复原状。
+
+> 这与图的回溯/DFS类似，但树没有环，因此不需要 visited 标记。
 
 ---
 
-**方法思路**
-1. **递归下探**：将当前节点加入路径。
-2. **到达叶子 / 终止条件**：检查当前路径是否满足要求（如和为 target）。
-3. **回溯撤销**：退出该节点时，把它从路径中移除，回到上层继续搜索。
+**伪代码形式：**
 
-这类题和普通递归的区别在于：
-* 普通递归只关心**结果值**（如深度、高度）；
-* 回溯递归则需要维护一条**路径状态**，并在递归返回时撤销。
+```python
+def dfs(node, path):
+    if not node:
+        return
+
+    # 做选择（进入节点）
+    path.append(node.val)
+
+    # 判断是否到达叶子（路径结束条件）
+    if not node.left and not node.right:
+        # 此时 path 就是一条完整路径
+        process(path)
+
+    # 递归子树
+    dfs(node.left, path)
+    dfs(node.right, path)
+
+    # 撤销选择（回溯）
+    path.pop()
+```
+
+关键点：**进入节点时加入，离开节点时移除**。这就是「回溯」思想。
+
+---
+
+**应用场景：**
+
+1. 枚举所有路径
+
+   * 不需要额外约束，直接收集所有根到叶的路径。
+   * 用于打印、统计路径数。
+
+2. 路径和问题
+
+   * 限定路径的节点值之和是否等于目标值。
+   * 典型思路：递归时传递「剩余和」或在回溯时累加求和。
+
+3. 路径存在性判断
+
+   * 只需找到一条符合条件的路径即可。
+   * 可以在递归中 **提前返回**，不必遍历所有路径。
+
+4. 最长/最短路径
+
+   * 在回溯时，维护一个全局变量存最大/最小路径长度。
+   * 或者在叶子节点时更新答案。
 
 ---
 
@@ -476,34 +498,90 @@ class Solution:
 
 ---
 
-### 小结
-
-* **回溯 / 路径搜索** 适合处理「路径相关」问题：
-  * 要么找 **是否存在** 某条路径；
-  * 要么收集 **所有路径**。
-
-* 特点是 **路径状态随递归维护**，需要 **进入时选择、退出时撤销**。
-
-* 和普通递归/分治、树形 DP 最大的不同是：
-  * **回溯强调路径（动态过程）**，
-  * **分治强调结果合并（静态子问题）**，
-  * **树形 DP 强调状态转移（优化子结构）**。
 
 ---
 
 ## 树形DP
 
-二叉树的 **树形 DP（Tree DP）** 是二叉树题目里比较高级的一个方向，常见于 **路径计算、最大独立集、状态转移优化** 等。
+树形 DP 是一种 **在树结构上进行动态规划** 的方法。
 
-树形 DP 是 **在树的结构上进行动态规划**。
+* 树的递归特性天然适合「自底向上」地做状态转移。
+* 本质是：**在子树上求解子问题，再合并结果得到父节点的解**。
 
-* 子问题：通常是 **以某个节点为根的子树** 的最优解。
-* 状态转移：通过 **合并子树的结果** 来得到父节点的最优解。
+公式化描述：
+
+$$
+f(u) = \text{Combine}\{ f(v) \mid v \in children(u) \}
+$$
+
+---
+
+**树形 DP 的核心思想：**
+树形 DP 其实是 **分治 + 动态规划** 的结合。
+
+1. **分治**：树可以递归拆分为子树。
+2. **动态规划**：对子问题结果进行缓存，避免重复计算。
+
+**树形 DP 的一般套路：**
+
+1. 明确 **状态定义**（在某个节点、某种选择下的最优解）。
+2. 明确 **状态转移**（父节点如何依赖子节点的结果）。
+3. 通过 DFS 后序遍历来计算（先算子树，后算父节点）。
 
 > 关键在于 **后序遍历**（因为要等左右子树算完，才能算父节点）。
 
 ---
 
+**常见的树形 DP 模式**
+
+一、节点选或不选类（树上独立集）
+
+* **状态**：
+
+  * $f(u, 0)$：节点 $u$ 不选的最优解
+  * $f(u, 1)$：节点 $u$ 选的最优解
+* **转移**：
+
+  * 若 $u$ 选，则子节点不能选。
+  * 若 $u$ 不选，则子节点可自由选。
+
+这种问题常用于「树形打家劫舍 / 最大独立集」。
+
+二、子树信息统计类
+
+* 例如：子树大小、子树高度、子树路径和。
+* 只需要递归子树，累加或取最大值即可。
+
+这是最简单的树形 DP：**父节点的值依赖于子节点的结果**。
+
+三、树上的路径/直径问题
+
+* 直径 = 两条子树路径的最大和。
+* 常见方法：在计算子树深度的同时，用两个最大子树路径拼接更新答案。
+
+四、树上背包类
+
+* 在树的结构上做「背包问题」。
+* 父节点容量固定，要从子节点选择若干方案合并。
+* 通常用 **DFS + 背包 DP 转移**。
+
+这是最难的树形 DP 类型，常见于「分组背包在树上的扩展」。
+
+---
+
+树形 DP 与其他方法的区别
+
+* **递归 / 分治**：关注子树的计算，但不强调「状态定义与转移」，更多是直接合并答案。
+* **回溯 / 路径搜索**：关注的是「路径枚举」和「搜索剪枝」，而不是「最优解」。
+* **树形 DP**：核心在于 **定义状态** + **子问题转移**，目标是求解「全局最优」。
+
+一句话总结：
+
+* **回溯**：找路径（枚举 / 存在性）。
+* **递归分治**：求子树性质（高度 / 节点数）。
+* **树形 DP**：定义状态，在树上做「最优子结构」合并。
+
+---
 
 ### [124. 二叉树中的最大路径和](https://leetcode.cn/problems/binary-tree-maximum-path-sum/)
 
@@ -556,51 +634,5 @@ class Solution:
         dfs(root)
         return ans
 ```
-
----
-
-### 最大独立集（树上选点问题）
-
-在二叉树中选点，不能选相邻的父子节点，求最大权值和。
-
-* 定义状态：
-
-  * `dp[u][0]` = 不选 `u` 的最大值
-  * `dp[u][1]` = 选 `u` 的最大值
-* 转移：
-
-  ```
-  dp[u][0] = sum( max(dp[v][0], dp[v][1]) )   // 子节点随意
-  dp[u][1] = u.val + sum( dp[v][0] )          // 子节点不能选
-  ```
-
----
-
-### 路径计数 / 分割方案
-
-从根到叶子的路径和 == target 的条数。
-
-* 思路：
-
-  * 用递归函数返回「从当前节点出发能组成 target 的方案数」。
-  * 或者在 DFS 时记录路径，然后用回溯做加法/减法。
-
----
-
-### 状态机 DP on 树
-
-* 类似「在树上染色」或「覆盖问题」。
-* 思路就是 **节点状态有限，依赖子树状态，进行合并**。
-
----
-
-### 小结
-
-二叉树的树形 DP 常见套路：
-
-1. **后序遍历**（左右子树算完再算父节点）。
-2. **定义子问题**（通常是某个节点的最优解）。
-3. **设计状态转移**（结合左右子树结果）。
-4. **全局变量维护答案** 或 **dp 数组返回答案**。
 
 ---
